[gd_scene load_steps=9 format=3 uid="uid://c7t8p4p14wtfi"]

[ext_resource type="Script" path="res://Scenes and Scripts/House/woodwork.gd" id="1_12rim"]
[ext_resource type="Texture2D" uid="uid://f14i16miwhhk" path="res://icon.svg" id="1_x7qny"]
[ext_resource type="Texture2D" uid="uid://b5t563fwu7r7c" path="res://Assets/Buttons/pixil-frame-5.png" id="3_pqc0a"]
[ext_resource type="Texture2D" uid="uid://dfi55peaei8uq" path="res://Assets/Items/tronco.png" id="4_vrh8x"]
[ext_resource type="Texture2D" uid="uid://b6qhs0pxwkylv" path="res://Assets/Items/plank.png" id="5_atv5u"]
[ext_resource type="Texture2D" uid="uid://cip0d5hh53s6e" path="res://Assets/Items/wood_handler.png" id="7_3rchy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0wod3"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.294118, 0.294118, 0.294118, 1)
border_blend = true
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s85da"]
bg_color = Color(0.309804, 0.309804, 0.309804, 0.733333)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.403922, 0.403922, 0.403922, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Woodwork" type="StaticBody2D"]
scale = Vector2(2, 2)
script = ExtResource("1_12rim")

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_x7qny")

[node name="PlayerDetection" type="Area2D" parent="Sprite"]

[node name="DetectionShape" type="CollisionPolygon2D" parent="Sprite/PlayerDetection"]
position = Vector2(0, -12.4832)
scale = Vector2(1, 1.58654)
polygon = PackedVector2Array(-0.5, 11, -31.5, 20.5, -32, 42.5348, 32.5, 42.5, 32, 20.5)

[node name="Shape" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-16, 5, 17, 5, 20, 7, 19.5, 19, 32, 20, 32, 31, -32, 32, -32, 20, -16, 20)

[node name="Panel" type="Panel" parent="."]
visible = false
texture_filter = 1
offset_left = -104.0
offset_top = -67.0
offset_right = 106.0
offset_bottom = 58.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0wod3")

[node name="CutLog" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 25.0
offset_top = 88.0
offset_right = 49.0
offset_bottom = 112.0
icon = ExtResource("3_pqc0a")

[node name="Log Info" type="Panel" parent="Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 24.5
offset_right = 66.0
offset_bottom = 82.5
theme_override_styles/panel = SubResource("StyleBoxFlat_s85da")

[node name="LogQuant" type="Label" parent="Panel/Log Info"]
texture_filter = 1
layout_mode = 0
offset_left = 11.1667
offset_top = 7.0
offset_right = 64.1667
offset_bottom = 30.0
theme_override_font_sizes/font_size = 12
text = "10"

[node name="Log" type="Sprite2D" parent="Panel/Log Info"]
texture_filter = 1
position = Vector2(38.5, 14.3333)
scale = Vector2(0.713333, 0.713333)
texture = ExtResource("4_vrh8x")

[node name="PlankQuant" type="Label" parent="Panel/Log Info"]
texture_filter = 1
layout_mode = 0
offset_left = 11.1667
offset_top = 35.6667
offset_right = 64.1667
offset_bottom = 58.6667
theme_override_font_sizes/font_size = 12
text = "1"

[node name="Plank" type="Sprite2D" parent="Panel/Log Info"]
texture_filter = 1
position = Vector2(38, 44.3333)
rotation = 0.598648
scale = Vector2(0.373333, 0.373333)
texture = ExtResource("5_atv5u")

[node name="Equal" type="Label" parent="Panel/Log Info"]
texture_filter = 1
layout_mode = 0
offset_left = 21.3333
offset_top = 21.6667
offset_right = 74.3333
offset_bottom = 44.6667
theme_override_font_sizes/font_size = 12
text = "="

[node name="Log Info2" type="Panel" parent="Panel"]
offset_left = 125.5
offset_top = 25.6667
offset_right = 183.5
offset_bottom = 83.6667
theme_override_styles/panel = SubResource("StyleBoxFlat_s85da")

[node name="Plank" type="Sprite2D" parent="Panel/Log Info2"]
texture_filter = 1
position = Vector2(38, 14.3333)
rotation = 0.598648
scale = Vector2(0.373333, 0.373333)
texture = ExtResource("5_atv5u")

[node name="PlankQuant" type="Label" parent="Panel/Log Info2"]
texture_filter = 1
layout_mode = 0
offset_left = 11.1667
offset_top = 7.0
offset_right = 64.1667
offset_bottom = 30.0
theme_override_font_sizes/font_size = 12
text = "5"

[node name="Handler" type="Sprite2D" parent="Panel/Log Info2"]
texture_filter = 1
position = Vector2(38, 43.3333)
scale = Vector2(1.1875, 1.1875)
texture = ExtResource("7_3rchy")

[node name="HandlerQuant" type="Label" parent="Panel/Log Info2"]
texture_filter = 1
layout_mode = 0
offset_left = 11.1667
offset_top = 35.6667
offset_right = 64.1667
offset_bottom = 58.6667
theme_override_font_sizes/font_size = 12
text = "1"

[node name="Equal" type="Label" parent="Panel/Log Info2"]
texture_filter = 1
layout_mode = 0
offset_left = 21.3333
offset_top = 21.6667
offset_right = 74.3333
offset_bottom = 44.6667
theme_override_font_sizes/font_size = 12
text = "="

[node name="CraftHandler" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 141.0
offset_top = 89.6667
offset_right = 165.0
offset_bottom = 113.667
icon = ExtResource("3_pqc0a")

[connection signal="body_entered" from="Sprite/PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="Sprite/PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="pressed" from="Panel/CutLog" to="." method="_on_cut_log_pressed"]
[connection signal="pressed" from="Panel/CraftHandler" to="." method="_on_craft_handler_pressed"]
